test/error/error.input126.zc
Unknown variable:ptr on line 7
